# veda_source

./: LICENSE  dir_3af66f256f6cb71d682936d9e842cb10.html  examples.html  examples.js  examples_2VE_2libompfortran_8vf90-example.html  examples_2VE_2libomphello_8vc-example.html  examples_2VE_2libvefortran_8vf90-example.html  examples_2VE_2libvehello_8vc-example.html  examples_2VH_2fortran_8c-example.html  examples_2VH_2hello_8c-example.html  examples_2VH_2omphello_8c-example.html  examples_2VH_2omphellofortran_8c-example.html  group__vedaapi.html  group__vedaapi.js  group__veraapi.html  group__veraapi.js  index.html  md_GettingStarted.html  md_Restriction.html  modules.html  modules.js  navtree.js  navtreeindex0.js  pages.html
example/cmake_find/: readme.md
example/delayed_malloc/: CMakeLists.txt  readme.md
example/helloworld_inject/: readme.md
example/helloworld_native/: CMakeLists.txt  readme.md
example/helloworld_veda/: CMakeLists.txt
src/: CMakeLists.txt  veda-smi.cpp  veda.cpp  veda.h  veda_args.cpp  veda_context.cpp  veda_device.cpp  veda_enums.h  veda_mem.cpp  veda_module.cpp  veda_stream.cpp  vera.cpp  vera.h
src/cmake/: FindVE.cmake  InjectVE.in.cmake
src/cmake/nec/: VE_CMakeCompiler.cmake.in
src/doc/: Makefile
src/tests/: CMakeLists.txt
src/tests/FT/: CMakeLists.txt  FT_VEDA_CONTEXT_01.cpp  FT_VEDA_MODULE_01.c  FT_VEDA_exec_01.cpp  FT_VEDA_mem_01.cpp  FT_VERA_01.cpp
src/tests/QIP/: CMakeLists.txt
src/tests/ST/: CMakeLists.txt
src/tests/ve/: CMakeLists.txt  QIP_VEDA_03.vcpp  test.vcpp
src/ve/: CMakeLists.txt  veda_device.vcpp  veda_kernels.vcpp
src/veda/: Context.cpp  Context.hpp  Contexts.cpp  Contexts.hpp  Device.cpp  Device.hpp  Devices.cpp  Semaphore.cpp  Semaphore.hpp  macros.hpp  veda.cpp
