INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIQIP_DIR}/../../)
ENABLE_LANGUAGE(VEDA_C)
ENABLE_LANGUAGE(CXX VEDA_CXX)
ENABLE_LANGUAGE(VEDA_Fortran)
SET(VEDA_LIBRARY veda)
SET(VERA_LIBRARY vera)

ADD_EXECUTABLE		(QIP_VEDA_01 QIP_VEDA_01.cpp)
TARGET_LINK_LIBRARIES	(QIP_VEDA_01 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(QIP_VEDA_01 PRIVATE -std=c++11)
ADD_LIBRARY		(vefortran SHARED ../ve/QIP_VEDA_01.vf90)

ADD_EXECUTABLE		(QIP_VEDA_04 QIP_VEDA_04.cpp)
TARGET_COMPILE_OPTIONS	(QIP_VEDA_04 PRIVATE -std=c++11)
TARGET_LINK_LIBRARIES	(QIP_VEDA_04 ${VEDA_LIBRARY}  ${VERA_LIBRARY})

ADD_EXECUTABLE		(QIP_VEDA_02 QIP_VEDA_02.cpp)
TARGET_LINK_LIBRARIES	(QIP_VEDA_02 ${VEDA_LIBRARY}  ${VERA_LIBRARY} mpi)
TARGET_COMPILE_OPTIONS	(QIP_VEDA_02 PRIVATE -std=c++11)
ADD_LIBRARY		(QIP_VEDA_02_ve SHARED ../ve/QIP_VEDA_02.vcpp)

ADD_EXECUTABLE		(QIP_VEDA_03 QIP_VEDA_03.cpp)
TARGET_LINK_LIBRARIES	(QIP_VEDA_03 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(QIP_VEDA_03 PRIVATE -std=c++11)
ADD_LIBRARY		(QIP_VEDA_03_ve SHARED ../ve/QIP_VEDA_03.vcpp)

ADD_EXECUTABLE          (ST_VEDA_04 ST_VEDA_04.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_04 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS  (ST_VEDA_04 PRIVATE -fopenmp -std=c++11 -g)
SET_TARGET_PROPERTIES   (ST_VEDA_04 PROPERTIES LINK_FLAGS -fopenmp)
ADD_LIBRARY		(omp_func_ve SHARED ../ve/ve_omp_func.vcpp)

ADD_EXECUTABLE          (ST_VEDA_05 ST_VEDA_05.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_05 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS  (ST_VEDA_05 PRIVATE -fopenmp -std=c++11 -g)
SET_TARGET_PROPERTIES   (ST_VEDA_05 PROPERTIES LINK_FLAGS -fopenmp)

ADD_EXECUTABLE          (ST_VEDA_06 ST_VEDA_06.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_06 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS  (ST_VEDA_06 PRIVATE -fopenmp -std=c++11 -g)
SET_TARGET_PROPERTIES   (ST_VEDA_06 PROPERTIES LINK_FLAGS -fopenmp)

ADD_EXECUTABLE          (ST_VEDA_07 ST_VEDA_07.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_07 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_07 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_08 ST_VEDA_08.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_08 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_08 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_09 ST_VEDA_09.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_09 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_09 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_09 PROPERTIES LINK_FLAGS -pthread)

ADD_EXECUTABLE          (ST_VEDA_10 ST_VEDA_10.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_10 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_10 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_10 PROPERTIES LINK_FLAGS -pthread)

ADD_EXECUTABLE          (ST_VEDA_11 ST_VEDA_11.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_11 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_11 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_12 ST_VEDA_12.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_12 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_12 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_13 ST_VEDA_13.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_13 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_13 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_14 ST_VEDA_14.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_14 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_14 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_15 ST_VEDA_15.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_15 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_15 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_15 PROPERTIES LINK_FLAGS -pthread)

ADD_EXECUTABLE          (ST_VEDA_16 ST_VEDA_16.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_16 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
TARGET_COMPILE_OPTIONS	(ST_VEDA_16 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_16 PROPERTIES LINK_FLAGS -pthread)

INSTALL(TARGETS QIP_VEDA_01 QIP_VEDA_02 QIP_VEDA_03 QIP_VEDA_04 ST_VEDA_04 ST_VEDA_05 ST_VEDA_06 ST_VEDA_07 ST_VEDA_08 ST_VEDA_09 ST_VEDA_10 ST_VEDA_11 ST_VEDA_12 ST_VEDA_13 ST_VEDA_14 ST_VEDA_15 ST_VEDA_16 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(TARGETS vefortran QIP_VEDA_02_ve QIP_VEDA_03_ve omp_func_ve LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)

