INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/../../)
ENABLE_LANGUAGE(VEDA_C)
ENABLE_LANGUAGE(CXX VEDA_CXX)
SET(VEDA_LIBRARY veda)
SET(VERA_LIBRARY vera)


ADD_EXECUTABLE		(ST_VEDA_01 ST_VEDA_01.cpp)
TARGET_LINK_LIBRARIES	(ST_VEDA_01 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
ADD_LIBRARY		(ST_VEDA_01_ve SHARED ../ve/ST_VEDA_01.vcpp)

ADD_EXECUTABLE          (ST_VEDA_02 ST_VEDA_02.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_02 ${VEDA_LIBRARY}  ${VERA_LIBRARY})
ADD_LIBRARY             (ST_VEDA_02_ve SHARED ../ve/ST_VEDA_02.vcpp)

ADD_EXECUTABLE          (ST_VEDA_03 ST_VEDA_03.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_03 ${VEDA_LIBRARY}  ${VERA_LIBRARY})

INSTALL(TARGETS ST_VEDA_01 ST_VEDA_02 ST_VEDA_03 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(TARGETS ST_VEDA_01_ve ST_VEDA_02_ve LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)

